<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.inspeksi1.Transmisi1Activity">

    <LinearLayout
        android:id="@+id/layout_choice1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_5sdp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_phasaR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/phasa_r"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/_18ssp" />

        <TextView
            android:id="@+id/tv_phasaS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/phasa_s"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/_18ssp" />

        <TextView
            android:id="@+id/tv_phasaT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/phasa_t"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/_18ssp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_choice2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_5sdp"
        android:layout_marginRight="@dimen/_5sdp"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:id="@+id/tv_spring"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_2sdp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:padding="@dimen/_4sdp"
            android:text="@string/spring"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_15ssp" />

        <TextView
            android:id="@+id/tv_hidrolik"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_2sdp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:padding="@dimen/_4sdp"
            android:text="@string/hydraulic"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_15ssp" />

        <TextView
            android:id="@+id/tv_pneumatic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_2sdp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:padding="@dimen/_4sdp"
            android:text="@string/pneumatic"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_15ssp" />

        <TextView
            android:id="@+id/tv_sfg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_2sdp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:padding="@dimen/_4sdp"
            android:text="@string/sfg"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_15ssp" />

        <TextView
            android:id="@+id/tv_oil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_2sdp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:padding="@dimen/_4sdp"
            android:text="@string/oil"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_15ssp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_setgetphasa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="Phasa"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/_14ssp"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/layout_spring"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_5sdp"
        android:layout_marginRight="@dimen/_5sdp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="chose one"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/_14ssp" />

        <RadioGroup
            android:id="@+id/rg_spring"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Full Charge"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/_14ssp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Tidak Charge"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/_14ssp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Tidak Terbaca"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/_14ssp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Rusak"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/_14ssp" />
        </RadioGroup>

        <Button
            android:id="@+id/btn_upload_spring"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="oke" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/layout_sfg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_5sdp"
        android:visibility="gone">

        <TextView
            android:id="@+id/tvtekanangas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_2sdp"
            android:padding="@dimen/_4sdp"
            android:text="@string/tekanan_gas_sf6"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/_12ssp" />

        <EditText
            android:id="@+id/et_tekananGas"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvtekanangas"
            android:hint="@string/tekanan_gas"
            android:inputType="text"
            android:textColor="@color/colorPrimaryDark" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/et_tekananGas"
            android:layout_alignBottom="@+id/et_tekananGas"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_toEndOf="@+id/et_tekananGas"
            android:text="@string/ber_kpa_psi"
            android:textColor="@color/colorPrimaryDark" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_tekananGas"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_2sdp"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:padding="@dimen/_4sdp"
                android:text="@string/normal"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/_13ssp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_2sdp"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:padding="@dimen/_4sdp"
                android:text="@string/berkurang"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/_13ssp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_2sdp"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:padding="@dimen/_4sdp"
                android:text="@string/tidak_terbaca"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/_13ssp" />
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/layout_hidrolik"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_5sdp"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Tekanan Hidrolik"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/_14ssp" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="(bar/kg/cm/kpa/pa)" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Level Minyak Pada Pompa"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/_14ssp" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Normal"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/_10ssp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Tidak Terbaca"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/_10ssp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Berkurang"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/_10ssp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Rusak"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/_10ssp" />
        </RadioGroup>

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Kali Kerja Pompa Hidrolik"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/_14ssp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editText3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:hint="Jam" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="jam"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/_12ssp" />

            <EditText
                android:id="@+id/editText4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:hint="Kali"
                android:textColor="@color/colorPrimaryDark" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="kali"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/_12ssp" />
        </LinearLayout>

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Normal"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/_14ssp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Sedang Kerja"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/_14ssp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Rusak"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/_14ssp" />
        </RadioGroup>

        <Button
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:gravity="center_horizontal"
            android:text="Oke" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_5sdp"
        android:visibility="gone">

        <TextView
            android:id="@+id/tvlm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="Penunjukan Level Minyak"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/_14ssp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvlm"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btn_oil_normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_2sdp"
                android:layout_weight="1"
                android:padding="@dimen/_4sdp"
                android:text="Normal"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/_13ssp" />

            <TextView
                android:id="@+id/btn_oil_berkurang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_2sdp"
                android:layout_weight="1"
                android:padding="@dimen/_4sdp"
                android:text="Berkurang"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/_13ssp" />

            <TextView
                android:id="@+id/btn_oil_tidakterbaca"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_2sdp"
                android:padding="@dimen/_4sdp"
                android:text="@string/tidak_terbaca"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/_13ssp" />

            <TextView
                android:id="@+id/btn_oil_adacatatan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_2sdp"
                android:padding="@dimen/_4sdp"
                android:text="Ada Catatan"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/_13ssp" />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>